vpc.tf
resource "aws_vpc" "express_app_vpc" {
  cidr_block = "10.0.0.0/16"
  instance_tenancy = "default"
  enable_dns_hostnames = true

  tags = {
   Name = "express_app"
  }
}

resource "aws_subnet" "sn1" {
  cidr_block = "10.0.1.0/24"
  vpc_id = aws_vpc.express_app_vpc.id
  availability_zone = "eu-north-1a"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "sn2" {
  cidr_block = "10.0.2.0/24"
  vpc_id = aws_vpc.express_app_vpc.id
  availability_zone = "eu-north-1b"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "sn3" {
  cidr_block = "10.0.3.0/24"
  vpc_id = aws_vpc.express_app_vpc.id
  availability_zone = "eu-north-1c"
  map_public_ip_on_launch = true
}


resource "aws_security_group" "sg" {
  name = "sg"
  vpc_id = aws_vpc.express_app_vpc.id

  ingress {
    description = "https"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "http"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
